; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/replication/logical/extr_message.c_logicalmsg_redo.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/replication/logical/extr_message.c_logicalmsg_redo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@XLR_INFO_MASK = common dso_local global i64 0, align 8
@XLOG_LOGICAL_MESSAGE = common dso_local global i64 0, align 8
@PANIC = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"logicalmsg_redo: unknown op code %u\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @logicalmsg_redo(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i64 @XLogRecGetInfo(i32* %4)
  %6 = load i64, i64* @XLR_INFO_MASK, align 8
  %7 = xor i64 %6, -1
  %8 = and i64 %5, %7
  store i64 %8, i64* %3, align 8
  %9 = load i64, i64* %3, align 8
  %10 = load i64, i64* @XLOG_LOGICAL_MESSAGE, align 8
  %11 = icmp ne i64 %9, %10
  br i1 %11, label %12, label %16

12:                                               ; preds = %1
  %13 = load i32, i32* @PANIC, align 4
  %14 = load i64, i64* %3, align 8
  %15 = call i32 @elog(i32 %13, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i64 %14)
  br label %16

16:                                               ; preds = %12, %1
  ret void
}

declare dso_local i64 @XLogRecGetInfo(i32*) #1

declare dso_local i32 @elog(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
